# xdg-desktop-portal-sonicde

./: .clang-format  .gitignore  .kde-ci.yml  CMakeLists.txt
autotests/: CMakeLists.txt  colorschemetest.py  directbackendclient.cpp  org.freedesktop.impl.portal.desktop.sonicde.test.service.in  pipewirestreamtest.cpp  portalhelperstest.cpp  screencasttestbackend.cpp  test-sonicde-portals.conf.in  test-sonicde.portal.in  x11capturetest.cpp  x11clipboardprotocoltest.cpp  x11inputtest.cpp  xeismountertest.cpp
data/: CMakeLists.txt  org.freedesktop.impl.portal.desktop.kde.desktop.in  org.freedesktop.impl.portal.desktop.sonicde.cmake.in  org.freedesktop.impl.portal.desktop.sonicde.desktop.in  plasma-xdg-desktop-portal-kde.service.in  plasma-xdg-desktop-portal-sonicde.service.in  sonicde-portals.conf  sonicde.portal
src/: CMakeLists.txt  PipeWireLayout.qml  appchooserdialog.cpp  background.cpp  background.h  clipboard.cpp  clipboard.h  desktopportal.cpp  desktopportal.h  inputcapture.cpp  inputcapture.h  inputcapturebarrier.cpp  outputsmodel.cpp  outputsmodel.h  pendingportalreply.cpp  pendingportalreply.h  print.cpp  print.h  remotedesktop.cpp  remotedesktop.h  screencast.cpp  screencast.h  screencasting.cpp  screencasting.h  screenchooserdialog.cpp  screenchooserdialog.h  screenselectionprovider.cpp  screenselectionprovider.h  screenshot.cpp  screenshot.h  screenshotdialog.cpp  screenshotdialog.h  settings.cpp  utils.cpp  wallpaper.cpp  wallpaper.h  x11_debug.h  x11portalbootstrap.cpp  x11portalbootstrap.h  xdg-desktop-portal-kde.cpp
src/x11/: pipewirestream.cpp  pipewirestream.h  x11capture.cpp  x11capture.h  x11clipboard.cpp  x11clipboard.h  x11controller.cpp  x11controller.h  x11input.cpp  x11input.h  x11types.h  x11worker.cpp  x11worker.h  xeismounter.cpp  xeismounter.h
